# 211_331_Serdukova

./: CMakeLists.txt  Readme.md  data.enc  data.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
